// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`McpStatus > renders correctly when discovery is in progress 1`] = `
"⏳ MCP servers are starting up (0 initializing)...
Note: First startup may take longer. Tool availability will update automatically.

Configured MCP servers:

🟢 server-1 - Ready (1 tool, 1 resource)
A test server
  Tools:
  - tool-1
    A test tool
  Resources:
  - resource-1 (file:///tmp/resource-1.txt)  A test resource
"
`;

exports[`McpStatus > renders correctly with a blocked server 1`] = `
"Configured MCP servers:

🟢 server-1 - Ready (1 tool, 1 resource)
A test server
  Tools:
  - tool-1
    A test tool
  Resources:
  - resource-1 (file:///tmp/resource-1.txt)  A test resource

🔴 server-1 (from test-extension) - Blocked
"
`;

exports[`McpStatus > renders correctly with a connected server 1`] = `
"Configured MCP servers:

🟢 server-1 - Ready (1 tool, 1 resource)
A test server
  Tools:
  - tool-1
    A test tool
  Resources:
  - resource-1 (file:///tmp/resource-1.txt)  A test resource
"
`;

exports[`McpStatus > renders correctly with a connecting server 1`] = `
"Configured MCP servers:

🟢 server-1 - Ready (1 tool, 1 resource)
A test server
  Tools:
  - tool-1
    A test tool
  Resources:
  - resource-1 (file:///tmp/resource-1.txt)  A test resource
"
`;

exports[`McpStatus > renders correctly with a disconnected server 1`] = `
"Configured MCP servers:

🟢 server-1 - Ready (1 tool, 1 resource)
A test server
  Tools:
  - tool-1
    A test tool
  Resources:
  - resource-1 (file:///tmp/resource-1.txt)  A test resource
"
`;

exports[`McpStatus > renders correctly with authenticated OAuth status 1`] = `
"Configured MCP servers:

🟢 server-1 - Ready (1 tool, 1 resource) (OAuth)
A test server
  Tools:
  - tool-1
    A test tool
  Resources:
  - resource-1 (file:///tmp/resource-1.txt)  A test resource
"
`;

exports[`McpStatus > renders correctly with expired OAuth status 1`] = `
"Configured MCP servers:

🟢 server-1 - Ready (1 tool, 1 resource) (OAuth expired)
A test server
  Tools:
  - tool-1
    A test tool
  Resources:
  - resource-1 (file:///tmp/resource-1.txt)  A test resource
"
`;

exports[`McpStatus > renders correctly with parametersJsonSchema 1`] = `
"Configured MCP servers:

🟢 server-1 - Ready (1 tool, 1 resource)
A test server
  Tools:
  - tool-1
    A test tool
      Parameters:
      {
        "type": "object",
        "properties": {
          "param1": {
            "type": "string"
          }
        }
      }
  Resources:
  - resource-1 (file:///tmp/resource-1.txt)  A test resource
"
`;

exports[`McpStatus > renders correctly with prompts 1`] = `
"Configured MCP servers:

🟢 server-1 - Ready (1 tool, 1 prompt, 1 resource)
A test server
  Tools:
  - tool-1
    A test tool
  Prompts:
  - prompt-1
    A test prompt
  Resources:
  - resource-1 (file:///tmp/resource-1.txt)  A test resource
"
`;

exports[`McpStatus > renders correctly with schema enabled 1`] = `
"Configured MCP servers:

🟢 server-1 - Ready (1 tool, 1 resource)
A test server
  Tools:
  - tool-1
    A test tool
      Parameters:
      {
        "type": "object",
        "properties": {
          "param1": {
            "type": "string"
          }
        }
      }
  Resources:
  - resource-1 (file:///tmp/resource-1.txt)  A test resource
"
`;

exports[`McpStatus > renders correctly with unauthenticated OAuth status 1`] = `
"Configured MCP servers:

🟢 server-1 - Ready (1 tool, 1 resource) (OAuth not authenticated)
A test server
  Tools:
  - tool-1
    A test tool
  Resources:
  - resource-1 (file:///tmp/resource-1.txt)  A test resource
"
`;
